# FalconsEsportsOverlays

./: .gitignore  404.html  LICENSE  README.md  controls.php  index.html  index.php  jsonWriter.php  launch.json
Falcons Esports Overlays Controller.app/Contents/: Info.plist
Falcons Esports Overlays Controller.app/Contents/Resources/: icon.icns
app/: analysis_options.yaml  flutter_launcher_icons.yaml  pubspec.yaml
app/android/: build.gradle  local.properties
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
app/android/app/src/main/kotlin/com/example/falcons_esports_overlays_controller/: MainActivity.kt
app/android/app/src/main/kotlin/com/madman_modding/app/: MainActivity.kt
app/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
app/ios/Runner/: GeneratedPluginRegistrant.m
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: constants.dart  git_handler.dart  json_handler.dart  main.dart  php_server_handler.dart
app/lib/commands/: file_pick.dart  folder_picker.dart
app/lib/common_widgets/: color_selector.dart  default_text.dart  text_editor.dart
app/lib/handlers/: download_handler.dart  git_handler.dart  http_handler.dart  json_handler.dart  notification_handler.dart  php_server_handler.dart  testing_handler.dart
app/lib/pages/: android_download.dart  config.dart  controls.dart  download.dart  git.dart  home.dart  http.dart  newControls.dart  php.dart
app/linux/: CMakeLists.txt  my_application.cc
app/linux/flutter/ephemeral/: generated_config.cmake
app/linux/flutter/ephemeral/.plugin_symlinks/: path_provider_linux  shared_preferences_linux
app/macos/Flutter/: GeneratedPluginRegistrant.swift
app/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
app/macos/Runner/: Info.plist
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner/Configs/: AppInfo.xcconfig
app/windows/flutter/ephemeral/.plugin_symlinks/: path_provider_windows  shared_preferences_windows
app/windows/runner/: Runner.rc
css/: index.css  kart.css  overwatch.css  rocketLeague.css  splat.css  splatoon.css  ssbu.css
js/: index.js  kart.js  overlays.js  overwatch.js  rocketLeague.js  splat.js  ssbu.js
overlays/: kart.html  overwatch.html  rocketLeague.html  splat.html  ssbu.html  val.html
rust-app/src/: index.css  index.html  main.js
rust-app/src-tauri/: Cargo.toml  tauri.conf.json
rust-app/src-tauri/src/: main.rs
rust-app/src/css/: home.css  index.css
rust-app/src/pages/: home.html
rust_app/: names.json  package.json
rust_app/src/: index.css  index.html
rust_app/src-tauri/: Cargo.toml  tauri.conf.json
rust_app/src-tauri/data/: text.json
rust_app/src-tauri/src/: constants.rs  lib.rs  text.json
rust_app/src-tauri/src/handlers/: config_handler.rs  custom_config.rs  download_handler.rs  http_handler.rs  image_handler.rs  json_handler.rs  overlay_searcher.rs
rust_app/src-tauri/wix/: main.wxs
rust_app/src/css/: bootstrap.css  common.css  config.css  controls.css  files.css  index.css  main.css
rust_app/src/js/: builders.js  config.js  controls.js  downloadHandler.js  download_handler.js  httpHandler.js  http_handler.js  imageControls.js  index.js  json_handler.js  main.js  makeButton.js  notifications.js  switchPage.js
rust_app/src/pages/: config.html  controls.html  files.html  main.html  server.html
src/: index.html
src-tauri/: .gitignore  Cargo.toml
src-tauri/flatpak/: manifest.json
src-tauri/src/: constants.rs  lib.rs  main.rs  thread_data.rs
src-tauri/src/handlers/: config_handler.rs  custom_config.rs  download_handler.rs  http_handler.rs  image_handler.rs  json_handler.rs  obs_handler.rs  os_handler.rs  overlay_handler.rs  overlay_searcher.rs
src-tauri/wix/: License.rtf  main.wxs
src/css/: bootstrap.css  config.css  controls.css  downloads.css  editor.css  index.css  main.css  server.css
src/js/: config.js  controls.js  downloadHandler.js  editor.js  httpHandler.js  imageControls.js  index.js  jsonHandler.js  notifications.js  obsHandler.js  overlayHandler.js  overlaySearcher.js  svg.draggable.min.js  switchPage.js
src/pages/: config.html  editor.html  files.html  main.html  server.html
