[package]
name = "falcons_esports_overlays_controller"
version = "3.1.0"
description = "An Esports overlay controller with lots of flexibility"
authors = ["MADMAN-Modding"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/MADMAN-Modding/FalconsEsportsOverlays"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "falcons_esports_overlays_controller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2.0.6", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
tokio = { version = "1.43.0", features = ["full"] }
zip = "2.5.0"
directories = "6.0.0"
once_cell = "1.20.3"
users = "0.11.0"

[package.metadata.wix]
name = "Falcons Esports Overlays Controller"
banner = "icons/banner.png"
culture = "en-US"
dbg-build = false
dbg-name = false
no-build = false
path-guid = "BFD25009-65A4-4D1E-97F1-0030465D90D6"
product-icon = "icons/icon.ico"
upgrade-guid = "B36177BE-EA4D-44FB-B05C-EDDABDAA95CA"
dialog = "icons/dialog.png"
