[package]
name = "falcons_esports_overlays_controller"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "falcons_esports_overlays_controller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
tokio = { version = "1.42.0", features = ["full"] }
zip = "2.2.1"
directories = "5.0.1"
once_cell = "1.20.2"


# Bug on the MacOS version I have to use on a certain Mac
[profile.dev.package.objc2]
debug-assertions = false