[package]
name = "falcons_esports_overlays_controller"
version = "1.0.1-2"
description = "Falcons Esports Overlays Controller"
authors = ["MADMAN-Modding"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "falcons_esports_overlays_controller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2.0.3", features = [] }

[dependencies]
tauri = { version = "2.2.3", features = [] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
tokio = { version = "1.43.0", features = ["full"] }
zip = "2.2.2"
directories = "6.0.0"
once_cell = "1.20.2"